# Water_Ledger

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  OPEN_SOURCE_PLAN.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: account_setup.md  brokerage_snapshots.md  data_model.md  import_guide.md  privacy.md  run_service.md
examples/: brokerage_asset_history.example.csv  manual_transactions.example.json  微信支付账单流水文件_sample.xlsx  支付宝交易明细_sample.csv
scripts/: export_longbridge_statement_history.py  fetch_brokerage_history.py  import_ledger.py  install_daily_brokerage_snapshot.py  smoke_test.sh  snapshot_longbridge_assets.py
skills/water-ledger-add-account/: SKILL.md
skills/water-ledger-assets/: SKILL.md
skills/water-ledger-import/: SKILL.md
skills/water-ledger-init/: SKILL.md
skills/water-ledger-privacy-check/: SKILL.md
skills/water-ledger-rules/: SKILL.md
tests/: test_brokerages.py  test_channel_enrichment.py  test_new_user_flow.py  test_privacy.py  test_scheduler.py  test_wallet_balance_estimates.py
water_ledger/: __init__.py  __main__.py  brokerages.py  cli.py  config.py  paths.py  pipeline.py  privacy.py  scheduler.py
water_ledger/core/: assets.py  classification.py  dedupe.py  models.py  refunds.py  reports.py  utils.py
water_ledger/importers/: bill_importers.py
water_ledger/resources/: config.example.yaml
water_ledger/storage/: database.py  schema.py  schema.sql
web_app/: server.py
web_app/static/design/: 04a1e265-4a42-4724-a075-8c949eaa4dab  0b781dd7-c4d8-40cb-b8ad-8b3967afe269  index.html  (+7 more)
